# effectsize

./: LICENSE.md  README.md  pyproject.toml  setup.cfg  tests.py
.github/: CONTRIBUTING.md
nhanes/: README.md  cleaning.do  info.md  nhanes_cleaned.dta  nhanes_examples.py
src/: effectsize.py  functions.py
tests/: README.md  functions.py  info.md  main_tests.py  simulating_data.py  unit_tests.py
