[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "effectsize"
version = "0.0.3"
authors = [
    { name = "Nasir Bashir", email = "nbashir562@gmail.com" },
]
description = "Computing effect sizes in Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.7"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "statsmodels"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research"
]

[project.urls]
"Homepage" = "https://github.com/nbashir97/effectsize"
