[metadata]
name = effectsize
version = 0.0.2
author = Nasir Bashir
author_email = nbashir562@gmail.com
description = Computing effect sizes in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = file: LICENSE
url = https://github.com/nbashir97/effectsize
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
platform = any

[options]
package_dir =
    = src
python_requires = >=3.7
install_requires =
    pandas
    numpy
    scipy
    statsmodels
